# fcm-rs

./: .env.example  Cargo.toml  README.md
src/: main.rs
src/handlers/: fcm_handler.rs  mod.rs
src/models/: fcm_payload.rs  mod.rs
