[package]
name = "fcm-rs"
version = "0.1.0"
authors = ["Andrie <andriebamz@gmail.com>"]
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
gauth = "0.8.0"
isahc = "1.7.2"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
